Third attempt to finish this task Add integration tests for LocationsController Improve tests for LocationsService